# imutils-cpp

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  README.md  annotated.html  classConvenience-members.html  classConvenience.html  classPath-members.html  classPath.html  classPerspective-members.html  classPerspective.html  classText-members.html  classText.html  classes.html  convenience_8h.html  convenience_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_869811060d14164acc836bcff114f028.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  paths_8h.html  paths_8h_source.html  perspective_8h.html  perspective_8h_source.html  text_8h.html  text_8h_source.html
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  doxygen-gh-pages.yml
include/imutils/: convenience.h  facealigner.h  helper.h  paths.h  perspective.h  text.h
search/: all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_3.js  functions_6.js  pages_0.js  searchdata.js
src/: convenience.cpp  facealigner.cpp  helper.cpp  paths.cpp  perspective.cpp  text.cpp
